# pc-ble-driver-py

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  azure-pipelines.yml  build.py  build_many_linux.sh  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini  version.py
.azure-pipelines/: run-tests-linux.yml  run-tests-mac.yml  run-tests-windows.yml  run-tests.yml  setup-nodejs-32.yaml  setup-nodejs-64.yaml  unix_setup-nodejs-64.yaml
pc_ble_driver_py/: __init__.py  ble_adapter.py  ble_driver.py  ble_driver_types.py  config.py  exceptions.py  observers.py
pc_ble_driver_py/examples/: __init__.py  advertising.py  heart_rate_collector.py  heart_rate_monitor.py  serial_port_enum.py
pc_ble_driver_py/hex/sd_api_v2/: __init__.py
pc_ble_driver_py/lib/: __init__.py
pc_ble_driver_py/lib/linux/x86_32/: __init__.py
pc_ble_driver_py/lib/linux/x86_64/: __init__.py
pc_ble_driver_py/lib/win/: __init__.py
pc_ble_driver_py/lib/win/x86_32/: __init__.py
python/: README.rst  setup.py
python/dummy/: foo.c  foo.h
python/pc_ble_driver_py/: BLEAdapter.py  PCBLEDriver.py  __init__.py  ble_adapter.py  ble_device.py  ble_driver.py  ble_driver_multi.py  ble_driver_types.py  ble_gattc.py  config.py  exceptions.py  gatt_db.py  gattc.py  nrf_adapter.py  nrf_dll_load.py  nrf_driver.py  nrf_driver_types.py  nrf_event.py  nrf_event_sync.py  nrf_observers.py  nrf_serial_no.py  nrf_types.py  observers.py
python/pc_ble_driver_py/examples/: advertising.py  example_test.py  heart_rate_collector.py  serial_port_enum.py
python/pc_ble_driver_py/examples/advertising/: main.py
python/pc_ble_driver_py/examples/dfu/: main.py
python/pc_ble_driver_py/examples/heart_rate_collector/: main.py
python/pc_ble_driver_py/examples/heart_rate_monitor/: main.py
python/pc_ble_driver_py/examples/heart_rate_relay/: main.py
python/pc_ble_driver_py/examples/multi_link/: main.py
python/pc_ble_driver_py/examples/serial_port_enum/: main.py
python/pc_ble_driver_py/hex/: __init__.py
python/pc_ble_driver_py/hex/sd_api_v2/: __init__.py
python/pc_ble_driver_py/lib/linux/: __init__.py
python/pc_ble_driver_py/lib/linux/x86_32/: __init__.py
python/pc_ble_driver_py/lib/linux/x86_64/: __init__.py
python/pc_ble_driver_py/lib/osx/: __init__.py
python/pc_ble_driver_py/lib/win/x86_32/: __init__.py
python/pc_ble_driver_py/lib/win/x86_64/: __init__.py
python/pc_ble_driver_py/test/: ble_driver_test.py
python/test/: conftest.py  test_pc_ble_driver_py.py  test_thingy.py
src/examples/advertising/: main.py
src/lib/: ble_driver_util.py
src/swig/: ble_driver_py.i  pc_ble_driver.i
swig/: pc_ble_driver.i  pc_ble_driver.i.in
tests/: __init__.py  ble_driver_test.py  requirements-test.txt  test_ble_common_api.py  test_connection_update.py  test_data_length.py  test_driver_open_close.py  test_lesc_security.py  test_mtu.py  test_passkey.py  test_pc_ble_driver_py.py  test_phy_update.py  test_programming.py  test_rssi.py  test_server_client.py  tox.ini
tests/driver_setup/: __init__.py  util.py
